--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -614,7 +614,7 @@ Obviously, individual atomic sentences like `$A$' and `$G_{13}$' should count as
 
 Instead, we will describe the process by which sentences can be \emph{constructed}. Consider negation: Given any sentence \meta{A} of \TFL, $\enot\meta{A}$ is a sentence of \TFL. (Why the funny fonts? I return to this in §\ref{s:UseMention}.)
 
-We can say similar things for each of the other connectives. For instance, if \meta{A} and \meta{B} are sentences of \TFL, then $(\meta{A}\eand\meta{B})$ is a sentence of \TFL. Providing clauses like this for all of the connectives, we arrive at the following formal definition for a \define{sentence} of \TFL\:
+We can say similar things for each of the other connectives. For instance, if \meta{A} and \meta{B} are sentences of \TFL, then $(\meta{A}\eand\meta{B})$ is a sentence of \TFL. Providing clauses like this for all of the connectives, we arrive at the following formal definition for a \define{sentence of \TFL}:
 	\factoidbox{
 	\begin{enumerate}
 		\item Every atomic sentence is a sentence.
