--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -51,7 +51,7 @@ We noted above that a name and a definite description might have very different 
 
 \section{A Word on Domains and Extensions}
 
-We always start our symbolisation keys by specifying a domain, and with extensions in view we can see why this is important. If we are to interpret an expression in terms of what it applies to, then we are going to need to know what things are `out there' for it to apply to. As we said before (§\ref{sec_domains}), the only restriction we place on our domains is that they be nonempty collections of things. But every extension we assign will be drawn from the domain: every name will be a member of the domain, and every one-place predicate will be assigned some things drawn from the domain. 
+We always start our symbolisation keys by specifying a domain, and with extensions in view we can see why this is important. If we are to interpret an expression in terms of what it applies to, then we are going to need to know what things are `out there' for it to apply to. As we said before (§\ref{sec_domains}), the only restriction we place on our domains is that they be nonempty collections of things. But every extension we assign will be drawn from the domain: every name will be assigned a member of the domain, and every one-place predicate will be assigned some things drawn from the domain. 
 
 We can stipulate directly which things in our domain our predicates are to be true of. So it is worth noting that our stipulations can be as \emph{arbitrary} as we like. For example, we could stipulate that `$H$' should be true of, and only of, the following objects:
 	\begin{center}
@@ -123,20 +123,14 @@ It is perhaps worth being explicit that our sequences are ordered groups of thin
 
 To make these ideas more precise, we would need to develop some \emph{set theory}, the mathematical theory of collections. This would give you some tools for modelling extensions and ordered pairs (and ordered triples, etc.), as well as some ideas about the metaphysical status of collections and sets. Indeed, set theoretic tools lie at the heart of contemporary linguistic approaches to meaning in natural languages. However, we have neither the time nor the need to cover set theory in this book. I shall leave these notions at an imprecise level; the general idea will be clear enough, I hope. 
 
-\section{Zero-place Predicates}
+\section{Zero-place Predicates} \label{s:zpp}
 
+Consider these examples:  \begin{earg}
+\item[\ex{zeropa}] Coober Pedy is a harsh place. It is remote.
+\item[\ex{zeropb}] Coober Pedy is a harsh place. It is hot.
+In \ref{zeropa}, `it' refers to Coober Pedy. Not so in \ref{zeropb}: `it' in that sentence is a \define{dummy pronoun}, one which needs to be present for syntactic reasons (every English sentence requires a grammatical subject), but which doesn't make any contribution to the meaning of the sentence. They are common with metereological reports: `it is raining', `it is dark', etc. 
 
-    \begin{itemize}
-    \item Consider these examples:  \begin{enumerate}
-    \item \emph{Coober Pedy is a harsh place. It has underground houses.}
-    	\item \emph{Coober Pedy is a harsh place. It seldom rains there.}
-    \end{enumerate}
-    \item In 1, `it' refers to Coober Pedy. Not so in 2: `It' in that sentence is a textbf{dummy pronoun} (though `there' does refer)!
-
-    \item We took this example to suggest that the textbf{bare} report `it is raining' involved no genuine singular term, and modelled by a textbf{zero-place predicate} like $R$. 
-    	\item  These don't really apply to anything; they are either true or false of the whole speech situation, rather than true or false of something in the domain. 
-    	\item We treat them as having textbf{truth values as their extension} – just like the textbf{valuations} of \TFL. (In fact we can consider the valuations of \TFL\ as assignments of truth values as the extensions of atomic sentences of that language.)
-    \end{itemize}
+\FOL does not have the syntactic feature of English that every sentence must include a singular term. The zero-place predicate `$R$' is a well-formed sentence of \FOL. We can use these zero-place predicates, the atomic sentences of \TFL\ that continue to be part of \FOL, to symbolise sentences like `It is raining'. Indeed, this seems obligatory: the normal symbolisation of a bare pronoun will make use of a free variable. An English sentence like `He is tall' doesn't manage to express a meaningful claim in the absence of some context providing a referent for `he'. So it might be symbolised `$Tx$' – a formula of \FOL\ that is not a sentence – to indicate that we are not expecting this sentence that is being symbolised to be true or false in a given intepretation. To symbolise `it is hot' as `$Hx$' would on these grounds be a mistake: `it is hot' expresses a proposition even without a referent assigned to the pronoun `it', and is true or false in a situation just depending on whether heat is present or not. So it could be adequately symbolised by a zero-place predicate `$H$', which is assigned a truth value in a given intepretation indicating whether it is hot or not. So the extension of a zero-place predicate is a truth value, not a member (or some members) of the domain. In that sense, the interpretations of \FOL\ extend the valuations of \TFL. (Of course, in \TFL\ we use atomic sentences to symbolise many complex subject-predicate sentences that it not be appropriate to symbolise by a zero-place predicate in \FOL.)
 
 
 \section{Semantics for Identity}
